gcc/testsuite/rust/rustc/ui/rust-2018/unresolved-asterisk-imports.rs
// { dg-additional-options "-frust-edition=2018" }

use not_existing_crate::*; // { dg-error ".E0432." "" { target *-*-* } }
use std as foo;

fn main() {}

